@@ -15,7 +15,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclStrToD.c,v 1.1.2.20 2005/08/17 20:49:55 kennykb Exp $
+ * RCS: @(#) $Id: tclStrToD.c,v 1.1.2.21 2005/08/17 21:39:01 kennykb Exp $
  *
  *----------------------------------------------------------------------
  */
@@ -784,6 +784,10 @@ TclParseNumber( Tcl_Interp* interp,
 
     /* Skip past trailing whitespace */
 
+    if (endPtrPtr != NULL) {
+	*endPtrPtr = p;
+    }
+
     while (len > 0 && isspace(UCHAR(*p))) {
 	++p;
 	--len;
@@ -791,9 +795,7 @@ TclParseNumber( Tcl_Interp* interp,
 
     /* Determine whether a partial string is acceptable. */
 
-    if (endPtrPtr != NULL) {
-	*endPtrPtr = p;
-    } else if (len != 0 && *p != '\0') {
+    if (endPtrPtr == NULL && len != 0 && *p != '\0') {
 	status = TCL_ERROR;
     }
 
